# informed-repair-off-dnns-cnn

./: .cursorrules  .gitignore  README.md  REPAIR_SETS_README.md  corruption_repair_experiment.py  edit_set_visualizer.py  experiment_framework.py  experiments.py  generate_closest_repairset.py  generate_confident_wrong_repairset.py  generate_corrupted_edit_set.py  generate_edit_set.py  generate_king_penguin_edit_set.py  generate_specialized_repairsets.py  main.py  pyproject.toml  test_experiments.py  tutorial.py
.cursor/rules/: python-uv-usage.mdc
helpers/: dataset.py  eval.py  models.py  simple_repairset.py
heuristics/: __init__.py  activation_based.py  adaptive.py  base.py  classifier_only.py  feature_similarity.py  fire_module.py  gradient_based.py  last_n_layers.py  layer_position.py  neuron_contribution.py  raw_repair.py  sensitivity_based.py  template.py
sytorch/nn/: parameter.py  utils.py
templates/: index.html
