[project]
name = "aprnn"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dill==0.3.5.1",
    "flask>=3.1.1",
    "gurobipy==10.0.1",
    "imageio==2.5.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "numpy==1.24.2",
    "onnx==1.17.0",
    "onnxruntime==1.12.1",
    "pandas==1.4.2",
    "pillow==9.1.1",
    "requests>=2.32.3",
    "scipy==1.8.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "tqdm==4.63.1",
    "z3-solver==4.8.15.0",
]
